<?xml version="1.0"?>
<package format="2">
  <name>putm_dv_traction_control_driver</name>
  <version>0.0.1</version>
  <description>The putm_dv_traction_control_driver package</description>

  <maintainer email="mateusz-koza@outlook.com">Mateusz Koza</maintainer>

  <license>MIT</license>

  <author email="mateusz-koza@outlook.com">Mateusz Koza</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
